--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,11 +1,20 @@
-.list {
-  text-align: center;
-  list-style: none;
+.contacts__list {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 10px 0px;
+  list-style: inside;
+  font-size: 20px;
+  color: rgb(17, 5, 71);
 }
+
 .error {
   margin-bottom: 20px;
   text-align: center;
   font-size: 30px;
   font-weight: 500;
-  color: #212122;
+  color: #001ead;
+}
+
+.error_icon {
+  margin-bottom: -5px;
 }
