--- a/src/components/LoggedOut/LoggedOut.module.css
+++ b/src/components/LoggedOut/LoggedOut.module.css
@@ -7,8 +7,7 @@
 .title {
   text-align: center;
   font-size: 30px;
-  color: white;
-  text-shadow: 1px 1px 1px rgb(51, 24, 124);
+  color: #232323;
 }
 
 .notification {
@@ -16,22 +15,19 @@
   margin-bottom: 0;
   text-align: center;
   font-size: 24px;
-  color: white;
-  text-shadow: 1px 1px 1px rgb(51, 24, 124);
+  color: #232323;
 }
 
 .link {
   font-weight: 700;
-  color: white;
+  color: #2196f3;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    text-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
 .link:focus {
   color: blue;
-  text-shadow: 1px 1px 1px rgb(255, 255, 255, 0.4);
   text-decoration: none;
 }
 
@@ -40,6 +36,5 @@
   margin-bottom: 0;
   text-align: center;
   font-size: 22px;
-  color: white;
-  text-shadow: 1px 1px 1px rgb(51, 24, 124);
+  color: #232323;
 }
