--- a/src/components/LoginSuccess/LoginSuccess.module.css
+++ b/src/components/LoginSuccess/LoginSuccess.module.css
@@ -6,26 +6,24 @@
 .title {
   text-align: center;
   font-size: 30px;
-  color: var(--background-white);
-  text-shadow: 1px 1px 1px rgb(51, 24, 124);
+  color: #232323;
 }
 
 .notification {
   text-align: center;
   font-size: 26px;
-  color: var(--background-white);
-  text-shadow: 1px 1px 1px rgb(51, 24, 124);
+  color: #232323;
 }
 
 .link {
   font-weight: 700;
-  color: var(--background-white);
+  color: #232323;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
 .link:focus {
-  color: var(--active-button-text-color);
+  color: lightskyblue;
   text-decoration: none;
 }
